added div and a class container .

--- a/theshield fullstack/shield_project/welcome.html
+++ b/theshield fullstack/shield_project/welcome.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-
+<html>
 <head>
 
-    <title>Document </title>
     <link rel="stylesheet" href="login.css">
 <head>
-
-
+    <div class="container">
+<div>
     <section>
         <div>
-            <h1>JSON AJAX</h1>
+            <h1> View active contributors from our API</h1>
             <h1>
 
 
@@ -99,6 +98,7 @@
         </div>
       </div>
     </div>
+    </body>
   </body>
 
 
